Refactor unit test