@@ -1,7 +1,6 @@
 package uk.gov.hmcts.reform.prl.controllers.citizen;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -47,19 +46,17 @@ import uk.gov.hmcts.reform.prl.utils.TestUtil;
 
 import java.io.IOException;
 import java.time.ZonedDateTime;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Stream;
 
 import static java.util.Collections.emptyList;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doNothing;
@@ -70,17 +67,21 @@ import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.FL401_CASE_TYPE
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TASK_LIST_VERSION_V3;
 import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
-
 @ExtendWith(MockitoExtension.class)
-public class CitizenPartyDetailsMapperTest {
-    @InjectMocks
-    private CitizenPartyDetailsMapper citizenPartyDetailsMapper;
-    public static final String authToken = "Bearer TestAuthToken";
-    private CaseData caseData;
+class CitizenPartyDetailsMapperTest {
+    private static final String AUTH_TOKEN = "Bearer TestAuthToken";
+    private static final UUID APPLICANT_1_UUID = UUID.fromString("11111111-1111-1111-1111-111111111111");
+    private static final UUID APPLICANT_2_UUID = UUID.fromString("22222222-2222-2222-2222-222222222222");
+    private static final UUID ELEMENT_1_UUID = UUID.fromString("aaaaaaaa-1111-1111-1111-111111111111");
+    private static final UUID ELEMENT_2_UUID = UUID.fromString("bbbbbbbb-2222-2222-2222-222222222222");
 
+    private CaseData caseData;
     private CitizenUpdatedCaseData updateCaseData;
     private C100RebuildData c100RebuildData;
-    PartyDetails partyDetails;
+    private PartyDetails partyDetails;
+
+    @InjectMocks
+    private CitizenPartyDetailsMapper citizenPartyDetailsMapper;
     @Mock
     C100RespondentSolicitorService c100RespondentSolicitorService;
     @Mock
@@ -99,12 +100,11 @@ public class CitizenPartyDetailsMapperTest {
     C8ArchiveService c8ArchiveService;
     @Mock
     CaseNameService caseNameService;
-
     @Spy
     ObjectMapper objectMapper = new ObjectMapper();
 
     @BeforeEach
-    public void setUpCA() throws IOException {
+    void setUpCA() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -135,7 +135,7 @@ public class CitizenPartyDetailsMapperTest {
         caseData = CaseData.builder()
             .id(1234567891234567L)
             .caseTypeOfApplication(C100_CASE_TYPE)
-            .applicants(Arrays.asList(element(applicant1)))
+            .applicants(List.of(element(applicant1)))
             .c100RebuildData(c100RebuildData)
             .build();
 
@@ -159,7 +159,7 @@ public class CitizenPartyDetailsMapperTest {
             .build();
     }
 
-    public void setUpDa() throws IOException {
+    private void setUpDa() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -202,16 +202,17 @@ public class CitizenPartyDetailsMapperTest {
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsEventConfirmDetails() throws IOException {
+    void testMapUpdatedPartyDetailsEventConfirmDetails() throws IOException {
         setUpDa();
         CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData, updateCaseData,
                                                                                                                        CaseEvent.CONFIRM_YOUR_DETAILS,
-                                                                                                                       authToken);
+                                                                                                                       AUTH_TOKEN
+        );
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsDaRespondent() throws Exception {
+    void testMapUpdatedPartyDetailsDaRespondent() throws Exception {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -245,23 +246,21 @@ public class CitizenPartyDetailsMapperTest {
         caseData = CaseData.builder()
             .id(1234567891234567L)
             .caseTypeOfApplication(C100_CASE_TYPE)
-            .respondents(Arrays.asList(element(applicant1)))
+            .respondents(List.of(element(applicant1)))
 
             .c100RebuildData(c100RebuildData)
             .build();
         doNothing().when(c100RespondentSolicitorService).populateConfidentialAndMiscDataMap(any(), any(),
                                                                                             anyString());
         when(updatePartyDetailsService.checkIfConfidentialityDetailsChangedRespondent(any(),any())).thenReturn(true);
-        Map<String, Object> updatedCaseData = new HashMap<>();
-        Element<PartyDetails> respondent = null;
         CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData, updateCaseData,
                                                                                                                        CaseEvent.KEEP_DETAILS_PRIVATE,
-                                                                                                                       authToken);
+                                                                                                                       AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsDa13() throws Exception {
+    void testMapUpdatedPartyDetailsDa13() throws Exception {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -298,11 +297,9 @@ public class CitizenPartyDetailsMapperTest {
             .respondentsFL401(applicant1)
             .c100RebuildData(c100RebuildData)
             .build();
-        Map<String, Object> updatedCaseData = new HashMap<>();
-        Element<PartyDetails> respondent = null;
         CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData, updateCaseData,
                                                                                                                        CaseEvent.KEEP_DETAILS_PRIVATE,
-                                                                                                                       authToken);
+                                                                                                                       AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
@@ -324,23 +321,22 @@ public class CitizenPartyDetailsMapperTest {
         setUpDa();
         CaseEvent caseEvent = CaseEvent.valueOf(caseEventName);
         CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(
-            caseData, updateCaseData, caseEvent, authToken
+            caseData, updateCaseData, caseEvent, AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsCaseEventConfirmDetails() throws IOException {
+    void testMapUpdatedPartyDetailsCaseEventConfirmDetails() throws IOException {
         setUpCA();
 
-        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData,updateCaseData,
-                                                                                                                       CaseEvent.CONFIRM_YOUR_DETAILS,
-                                                                                                                       authToken);
+        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper
+            .mapUpdatedPartyDetails(caseData,updateCaseData, CaseEvent.CONFIRM_YOUR_DETAILS, AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsCaseEventConfirmDetailsAddressIsYes() throws Exception {
+    void testMapUpdatedPartyDetailsCaseEventConfirmDetailsAddressIsYes() throws Exception {
         setUpCA();
 
         updateCaseData = CitizenUpdatedCaseData.builder()
@@ -369,13 +365,13 @@ public class CitizenPartyDetailsMapperTest {
             caseData,
             updateCaseData,
             CaseEvent.CONFIRM_YOUR_DETAILS,
-            authToken
+            AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsCaseEventConfirmDetailsAddressIsNo() throws IOException {
+    void testMapUpdatedPartyDetailsCaseEventConfirmDetailsAddressIsNo() throws IOException {
         setUpCA();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -397,17 +393,16 @@ public class CitizenPartyDetailsMapperTest {
                 .build())
             .partyType(PartyEnum.applicant)
             .build();
-        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper.mapUpdatedPartyDetails(caseData,updateCaseData,
-            CaseEvent.CONFIRM_YOUR_DETAILS,
-            authToken);
+        CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper
+            .mapUpdatedPartyDetails(caseData,updateCaseData, CaseEvent.CONFIRM_YOUR_DETAILS, AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsEventCurrentProceedings() throws IOException {
+    void testMapUpdatedPartyDetailsEventCurrentProceedings() throws IOException {
         setUpDa();
         CitizenUpdatePartyDataContent citizenUpdatePartyDataContent = citizenPartyDetailsMapper
-            .mapUpdatedPartyDetails(caseData, updateCaseData, CaseEvent.CITIZEN_CURRENT_OR_PREVIOUS_PROCCEDINGS, authToken);
+            .mapUpdatedPartyDetails(caseData, updateCaseData, CaseEvent.CITIZEN_CURRENT_OR_PREVIOUS_PROCCEDINGS, AUTH_TOKEN);
         assertNotNull(citizenUpdatePartyDataContent);
     }
 
@@ -445,7 +440,7 @@ public class CitizenPartyDetailsMapperTest {
     }
 
     @Test
-    public void testBuildUpdatedCaseDataContainsCaseAccessCategory() throws IOException {
+    void testBuildUpdatedCaseDataContainsCaseAccessCategory() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -474,9 +469,8 @@ public class CitizenPartyDetailsMapperTest {
         verify(caseNameService).getCaseNameForCA(anyString(), anyString());
     }
 
-
     @Test
-    public void testBuildUpdatedCaseDataWhereAddressIsDontKnow() throws IOException {
+    void testBuildUpdatedCaseDataWhereAddressIsDontKnow() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -504,7 +498,7 @@ public class CitizenPartyDetailsMapperTest {
     }
 
     @Test
-    public void testGetC100RebuildCaseDataMap() throws IOException {
+    void testGetC100RebuildCaseDataMap() throws IOException {
         Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(caseData);
         assertNotNull(caseDataResult);
     }
@@ -517,7 +511,7 @@ public class CitizenPartyDetailsMapperTest {
             .build();
 
         Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(miamCaseData);
-        Assertions.assertEquals(emptyList(), caseDataResult.get("miamDocumentsCopy"));
+        assertEquals(emptyList(), caseDataResult.get("miamDocumentsCopy"));
     }
 
     @Test
@@ -530,8 +524,8 @@ public class CitizenPartyDetailsMapperTest {
 
         Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(miamDaCaseData);
         List<Element<Document>> miamDocumentsCopy = (List<Element<Document>>) (caseDataResult.get("miamDocumentsCopy"));
-        Assertions.assertEquals(1, miamDocumentsCopy.size());
-        Assertions.assertEquals("miamDAAbuseDoc.pdf", miamDocumentsCopy.getFirst().getValue().getDocumentFileName());
+        assertEquals(1, miamDocumentsCopy.size());
+        assertEquals("miamDAAbuseDoc.pdf", miamDocumentsCopy.getFirst().getValue().getDocumentFileName());
     }
 
     @Test
@@ -544,8 +538,8 @@ public class CitizenPartyDetailsMapperTest {
 
         Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(miamCertCaseData);
         List<Element<Document>> miamDocumentsCopy = (List<Element<Document>>) (caseDataResult.get("miamDocumentsCopy"));
-        Assertions.assertEquals(1, miamDocumentsCopy.size());
-        Assertions.assertEquals("miamPrevioiusAttendance.pdf", miamDocumentsCopy.getFirst().getValue().getDocumentFileName());
+        assertEquals(1, miamDocumentsCopy.size());
+        assertEquals("miamPrevioiusAttendance.pdf", miamDocumentsCopy.getFirst().getValue().getDocumentFileName());
     }
 
     @Test
@@ -558,12 +552,12 @@ public class CitizenPartyDetailsMapperTest {
 
         Map<String, Object> caseDataResult = citizenPartyDetailsMapper.getC100RebuildCaseDataMap(miamCertCaseData);
         List<Element<Document>> miamDocumentsCopy = (List<Element<Document>>) (caseDataResult.get("miamDocumentsCopy"));
-        Assertions.assertEquals(1, miamDocumentsCopy.size());
-        Assertions.assertEquals("applicant__miam_certificate__08012026.pdf", miamDocumentsCopy.getFirst().getValue().getDocumentFileName());
+        assertEquals(1, miamDocumentsCopy.size());
+        assertEquals("applicant__miam_certificate__08012026.pdf", miamDocumentsCopy.getFirst().getValue().getDocumentFileName());
     }
 
     @Test
-    public void testBuildUpdatedCaseDataForMiam() throws IOException {
+    void testBuildUpdatedCaseDataForMiam() throws IOException {
         c100RebuildData = C100RebuildData.builder()
             .c100RebuildInternationalElements(TestUtil.readFileFrom("classpath:c100-rebuild/ie.json"))
             .c100RebuildHearingWithoutNotice(TestUtil.readFileFrom("classpath:c100-rebuild/hwn.json"))
@@ -590,7 +584,7 @@ public class CitizenPartyDetailsMapperTest {
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsDaRespondentForV3() throws Exception {
+    void testMapUpdatedPartyDetailsDaRespondentForV3() throws Exception {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -625,7 +619,7 @@ public class CitizenPartyDetailsMapperTest {
             .id(1234567891234567L)
             .taskListVersion(TASK_LIST_VERSION_V3)
             .caseTypeOfApplication(C100_CASE_TYPE)
-            .respondents(Arrays.asList(element(applicant1)))
+            .respondents(List.of(element(applicant1)))
             .c100RebuildData(c100RebuildData)
             .build();
         doNothing().when(c100RespondentSolicitorService).populateConfidentialAndMiscDataMap(any(), any(),
@@ -636,7 +630,7 @@ public class CitizenPartyDetailsMapperTest {
             caseData,
             updateCaseData,
             CaseEvent.KEEP_DETAILS_PRIVATE,
-            authToken
+            AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
     }
@@ -711,13 +705,14 @@ public class CitizenPartyDetailsMapperTest {
 
         CaseData caseDataResult = citizenPartyDetailsMapper.buildUpdatedCaseData(caseData, c100RebuildData);
         assertNotNull(caseDataResult);
-        assertEquals(isAddressConfidential, caseDataResult.getOtherPartyInTheCaseRevised().get(0).getValue().getIsAddressConfidential());
-        assertEquals(liveInRefuge, caseDataResult.getOtherPartyInTheCaseRevised().get(0).getValue().getLiveInRefuge());
+        PartyDetails otherParty = caseDataResult.getOtherPartyInTheCaseRevised().getFirst().getValue();
+        assertEquals(isAddressConfidential, otherParty.getIsAddressConfidential());
+        assertEquals(liveInRefuge, otherParty.getLiveInRefuge());
         verify(caseNameService).getCaseNameForCA(anyString(), anyString());
     }
 
     @Test
-    public void testUpdatedPartyDetailsBasedOnEvent() {
+    void testUpdatedPartyDetailsBasedOnEvent() {
         PartyDetails partyDetails1 = partyDetails.toBuilder().response(null).build();
         PartyDetails partyDetails2 = partyDetails.toBuilder()
             .response(Response.builder().responseToAllegationsOfHarm(ResponseToAllegationsOfHarm.builder().build()).build())
@@ -730,7 +725,7 @@ public class CitizenPartyDetailsMapperTest {
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsCaseEventConfirmDetailsWithSafeTimeToCall() throws IOException {
+    void testMapUpdatedPartyDetailsCaseEventConfirmDetailsWithSafeTimeToCall() throws IOException {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -756,7 +751,7 @@ public class CitizenPartyDetailsMapperTest {
             caseData,
             updateCaseData,
             CaseEvent.CONFIRM_YOUR_DETAILS,
-            authToken
+            AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
         assertEquals("7pm", citizenUpdatePartyDataContent.updatedCaseDataMap().get("daApplicantContactInstructions"));
@@ -764,7 +759,7 @@ public class CitizenPartyDetailsMapperTest {
     }
 
     @Test
-    public void testMapUpdatedPartyDetailsWithSafeTimeToCallEmptyString() throws IOException {
+    void testMapUpdatedPartyDetailsWithSafeTimeToCallEmptyString() throws IOException {
         setUpDa();
         updateCaseData = CitizenUpdatedCaseData.builder()
             .caseTypeOfApplication(FL401_CASE_TYPE)
@@ -790,7 +785,7 @@ public class CitizenPartyDetailsMapperTest {
             caseData,
             updateCaseData,
             CaseEvent.CONFIRM_YOUR_DETAILS,
-            authToken
+            AUTH_TOKEN
         );
         assertNotNull(citizenUpdatePartyDataContent);
         assertNull(citizenUpdatePartyDataContent.updatedCaseDataMap().get("daApplicantContactInstructions"));
@@ -804,7 +799,7 @@ public class CitizenPartyDetailsMapperTest {
 
     @Test
     void testGetConfidentialFieldReturnsNullWhenNotConfidentialFields() {
-        assertEquals(null, citizenPartyDetailsMapper.getConfidentialField(YesOrNo.No, "test"));
+        assertNull(citizenPartyDetailsMapper.getConfidentialField(YesOrNo.No, "test"));
     }
 
     @Test
@@ -824,16 +819,15 @@ public class CitizenPartyDetailsMapperTest {
             .isPhoneNumberConfidential(YesOrNo.Yes)
             .build();
 
-
         List<Element<ApplicantConfidentialityDetails>> result =
             citizenPartyDetailsMapper.createApplicantConfidentialDetailsForCaseData(partyDetails);
 
-        org.junit.jupiter.api.Assertions.assertNotNull(result);
-        org.junit.jupiter.api.Assertions.assertEquals(1, result.size());
-        uk.gov.hmcts.reform.prl.models.complextypes.confidentiality.ApplicantConfidentialityDetails details = result.get(0).getValue();
-        org.junit.jupiter.api.Assertions.assertEquals(address, details.getAddress());
-        org.junit.jupiter.api.Assertions.assertNull(details.getEmail());
-        org.junit.jupiter.api.Assertions.assertEquals("123456789", details.getPhoneNumber());
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        ApplicantConfidentialityDetails details = result.getFirst().getValue();
+        assertEquals(address, details.getAddress());
+        assertNull(details.getEmail());
+        assertEquals("123456789", details.getPhoneNumber());
     }
 
     @Test
@@ -864,7 +858,7 @@ public class CitizenPartyDetailsMapperTest {
         List<Element<ApplicantConfidentialityDetails>> confDetails = result.getApplicantsConfidentialDetails();
         assertNotNull(confDetails);
         assertEquals(1, confDetails.size());
-        ApplicantConfidentialityDetails details = confDetails.get(0).getValue();
+        ApplicantConfidentialityDetails details = confDetails.getFirst().getValue();
         assertEquals(updatedPartyDetails.getAddress(), details.getAddress());
         assertNull(details.getEmail());
         assertEquals(updatedPartyDetails.getPhoneNumber(), details.getPhoneNumber());
@@ -891,7 +885,7 @@ public class CitizenPartyDetailsMapperTest {
         List<Element<ApplicantConfidentialityDetails>> confDetails = result.getApplicantsConfidentialDetails();
         assertNotNull(confDetails);
         assertEquals(1, confDetails.size());
-        ApplicantConfidentialityDetails details = confDetails.get(0).getValue();
+        ApplicantConfidentialityDetails details = confDetails.getFirst().getValue();
         assertEquals(updatedPartyDetails.getAddress(), details.getAddress());
         assertNull(details.getEmail());
         assertEquals(updatedPartyDetails.getPhoneNumber(), details.getPhoneNumber());
@@ -938,12 +932,7 @@ public class CitizenPartyDetailsMapperTest {
         }
     }
 
-    private static final UUID APPLICANT_1_UUID = UUID.fromString("11111111-1111-1111-1111-111111111111");
-    private static final UUID APPLICANT_2_UUID = UUID.fromString("22222222-2222-2222-2222-222222222222");
-    private static final UUID ELEMENT_1_UUID = UUID.fromString("aaaaaaaa-1111-1111-1111-111111111111");
-    private static final UUID ELEMENT_2_UUID = UUID.fromString("bbbbbbbb-2222-2222-2222-222222222222");
-
-    public static PartyDetails createPartyDetailsWithConfidentiality(UUID partyId,
+    private static PartyDetails createPartyDetailsWithConfidentiality(UUID partyId,
                                                                          String firstName,
                                                                          String lastName,
                                                                          YesOrNo addressConfidential,
@@ -959,14 +948,14 @@ public class CitizenPartyDetailsMapperTest {
             .build();
     }
 
-    public static CitizenUpdatedCaseData createCitizenUpdatedCaseData(PartyDetails partyDetails) {
+    private static CitizenUpdatedCaseData createCitizenUpdatedCaseData(PartyDetails partyDetails) {
         return CitizenUpdatedCaseData.builder()
             .partyDetails(partyDetails)
             .caseTypeOfApplication(C100_CASE_TYPE)
             .build();
     }
 
-    public static CaseData createCaseDataWithApplicants(List<Element<PartyDetails>> applicants) {
+    private static CaseData createCaseDataWithApplicants(List<Element<PartyDetails>> applicants) {
         return CaseData.builder()
             .id(1234567891234567L)
             .caseTypeOfApplication(C100_CASE_TYPE)
@@ -974,7 +963,7 @@ public class CitizenPartyDetailsMapperTest {
             .build();
     }
 
-    static Stream<Arguments> confidentialityTestScenarios() {
+    private static Stream<Arguments> confidentialityTestScenarios() {
         return Stream.of(
             Arguments.of(
                 "Single applicant - update confidentiality",
@@ -988,7 +977,7 @@ public class CitizenPartyDetailsMapperTest {
                 "Multiple applicants - update second applicant",
                 APPLICANT_2_UUID,
                 YesOrNo.Yes, YesOrNo.Yes, YesOrNo.No,
-                Arrays.asList(
+                List.of(
                     element(ELEMENT_1_UUID, createPartyDetailsWithConfidentiality(
                         APPLICANT_1_UUID, "John", "Doe", YesOrNo.No, YesOrNo.No, YesOrNo.No)),
                     element(ELEMENT_2_UUID, createPartyDetailsWithConfidentiality(
@@ -1006,5 +995,3 @@ public class CitizenPartyDetailsMapperTest {
         );
     }
 }
-
-
